@@ -7,6 +7,9 @@ CHANGES:
 - Added text highlight conversion (Fridrich Strba)
 - Added page form and orientation conversion (Fridrich Strba)
 - Added font colour conversion (Fridrich Strba)
+- Remove span parameters from calls to openParagraph and openListElement
+(William Lachance)
+- Additional doxygen comments (William Lachance)
 
 0.7.1 -> 0.7.2
 - Fixed bug in WP6FixedLengthGroup handling (Fridrich Strba)
